# godot_openhmd

./: .gitignore  .gitmodules  CONTRIBUTORS.md  LICENSE  README.md  SConstruct  VERSION.md  meson.build
.github/workflows/: build-on-push.yml
.github/workflows/scripts/: clang_format.sh  file_format.sh
OpenHMD/: README.md
OpenHMD/lib/win64/: openhmd.lib
demo/: Box.tscn  Ground.tscn  Main.gd  Main.tscn  Table.tscn  default_env.tres  project.godot
demo/addons/godot-openhmd/: CHANGES.md  godot_openhmd.gdnlib
demo/addons/godot-openhmd/scenes/: FirstPersonController.gd  FirstPersonController.tscn  SetupDialog.gd  SetupDialog.tscn
demo/addons/vr-common/images/: Thumbs.db
demo/assets/wahooney.itch.io/: green_grid.tres
hooks/: pre-commit-clang-format
libusb_include/: config.h
src/: ARVRInterface.c  GodotCalls.c  GodotCalls.h  godot_openhmd.c  godot_openhmd.h  openhmd_config.c  openhmd_config.h  openhmd_data.c  openhmd_data.h  openhmd_shader.c  openhmd_shader.h
subprojects/: OpenHMD.wrap
